[package]
name = "plic-rt"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "1.0"

[dev-dependencies]
plic = { path = "../plic" }
riscv = "0.6"
